--- a/HotelDlaPsow/WindowDailyActive.xaml
+++ b/HotelDlaPsow/WindowDailyActive.xaml
@@ -45,7 +45,7 @@
         </DataGrid>
         <Button x:Name="ButtonAdd" Grid.Column="2" Grid.Row="8" Margin="11,11,11,11" Content="Dodaj" Click="ButtonAdd_Click" IsEnabled="False"/>
         <Button x:Name="ButtonEdit" Grid.Column="3" Grid.Row="8" Margin="11,11,11,11" Content="Edytuj" Click="ButtonEdit_Click" IsEnabled="False"/>
-        <Button x:Name="ButtonDelete" Grid.Column="4" Grid.Row="8" Margin="11,11,11,11" Content="Usuń" Click="ButtonDelete_Click" IsEnabled="False"/>
+        <Button x:Name="ButtonDelete" Grid.Column="4" Grid.Row="8" Margin="11,11,11,0" Content="Usuń" Click="ButtonDelete_Click" IsEnabled="False" Height="26" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
